--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,7 +41,7 @@ security:
                 - lexik_jwt_authentication.jwt_token_authenticator
 
         secured_area:
-            pattern: "^/(?!api/.*|api$)[^/]++"
+            pattern: ^/
             provider: users
             anonymous: ~
             guard:
@@ -56,11 +56,10 @@ security:
               target: /
 
     access_control:
-        - { path: ^/profile/*,   roles: ROLE_USER                    }
-        - { path: ^/sign-up,     roles: IS_ANONYMOUS }
-        - { path: ^/sign-in,     roles: IS_ANONYMOUS }
+        - { path: ^/profile,      roles: ROLE_USER }
         - { path: ^/api/healthz, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/auth,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/signup,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/doc,     roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/,        roles: IS_AUTHENTICATED_FULLY       }
+        - { path: ^/api/,        roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/,            roles: IS_AUTHENTICATED_ANONYMOUSLY }
