--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Build
-      run: make env=ci start;make env=ci wait-for-elastic;make env=ci xoff
+      run: make env=ci start;make env=ci xoff
 
     - name: DDD LAYERS
       run: make env=ci layer
