--- a/etc/dev/docker-compose.yml
+++ b/etc/dev/docker-compose.yml
@@ -13,6 +13,13 @@ services:
     environment:
       PHP_IDE_CONFIG: serverName=es.local
 
+  blackfire:
+    image: blackfire/blackfire
+    env_file:
+      - .env.blackfire
+    environment:
+      BLACKFIRE_LOG_LEVEL: 4
+
   mysql:
     ports:
       - "3306:3306"
