--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -40,6 +40,7 @@
   </testsuites>
   <logging/>
   <listeners>
+    <listener class="App\Tests\TidierListener"/>
     <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener"/>
     <listener class="\DAMA\DoctrineTestBundle\PHPUnit\PHPUnitListener"/>
   </listeners>
