--- a/etc/artifact/Dockerfile
+++ b/etc/artifact/Dockerfile
@@ -18,7 +18,7 @@ RUN apk add -U sqlite \
     && rm -Rf /tmp/blackfire \
     && apk add --no-cache php-dev g++ autoconf make pcre2-dev \
     && pecl install pcov \
-    && apk del --no-cache php-dev g++ autoconf make pcre2-dev \
+    && apk del --no-cache g++ autoconf make pcre2-dev \
     && echo "extension=pcov.so" >> /etc/php7/php.ini \
     && echo "pcov.enabled=0" >> /etc/php7/php.ini
 
