--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "elasticsearch/elasticsearch": "^7.9",
         "lexik/jwt-authentication-bundle": "^2.8",
         "nelmio/api-doc-bundle": "4.0.0-BETA2",
+        "nikic/php-parser": "4.10.2",
         "ramsey/uuid": "^4.0",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.5",
