--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "broadway/event-store-dbal": "^0.5",
         "elasticsearch/elasticsearch": "^7.9",
         "lexik/jwt-authentication-bundle": "^2.8",
-        "nelmio/api-doc-bundle": "^3.6",
+        "nelmio/api-doc-bundle": "4.0.x",
         "ramsey/uuid": "^4.0",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.5",
@@ -29,16 +29,16 @@
     "require-dev": {
         "blackfire/php-sdk": "^1.23",
         "dama/doctrine-test-bundle": "^6.3",
-        "phpstan/phpstan": "^0.12.42",
+        "phpstan/phpstan": "^0.12.48",
         "phpunit/phpunit": "v9.3",
         "roave/security-advisories": "dev-master",
-        "sylius-labs/coding-standard": "^3.1",
+        "sylius-labs/coding-standard": "^3.2",
         "symfony/browser-kit": "^5.1",
         "symfony/css-selector": "^5.1",
         "symfony/dotenv": "^5.1",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/profiler-pack": "^1.0",
-        "vimeo/psalm": "^3.11"
+        "vimeo/psalm": "^3.16"
     },
     "config": {
         "preferred-install": {
