--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
         "elasticsearch/elasticsearch": "^7.9",
         "lexik/jwt-authentication-bundle": "^2.8",
         "nelmio/api-doc-bundle": "4.0.x",
-        "ramsey/uuid": "^4.0",
+        "ramsey/uuid": "^4.1",
         "ramsey/uuid-doctrine": "^1.6",
-        "sensio/framework-extra-bundle": "^5.5",
+        "sensio/framework-extra-bundle": "^5.6",
+        "symfony/amqp-messenger": "^5.1",
         "symfony/asset": "^5.1",
         "symfony/console": "^5.1",
-        "symfony/flex": "^1.7",
+        "symfony/flex": "^1.9",
         "symfony/framework-bundle": "^5.1",
         "symfony/messenger": "^5.1",
         "symfony/monolog-bundle": "^3.5",
