--- a/composer.json
+++ b/composer.json
@@ -4,28 +4,28 @@
     "require": {
         "php": "^7.4",
         "ext-json": "*",
-        "beberlei/assert": "^3.2",
+        "beberlei/assert": "^3.3",
         "broadway/broadway": "^2.3",
         "broadway/broadway-bundle": "^0.5",
         "broadway/event-store-dbal": "^0.5",
         "elasticsearch/elasticsearch": "^7.9",
-        "lexik/jwt-authentication-bundle": "^2.8",
-        "nelmio/api-doc-bundle": "4.0.x",
+        "lexik/jwt-authentication-bundle": "^2.10",
+        "nelmio/api-doc-bundle": "4.0.1",
         "ramsey/uuid": "^4.1",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.6",
-        "symfony/amqp-messenger": "^5.1",
-        "symfony/asset": "^5.1",
-        "symfony/console": "^5.1",
-        "symfony/flex": "^1.9",
-        "symfony/framework-bundle": "^5.1",
-        "symfony/messenger": "^5.1",
+        "symfony/amqp-messenger": "^5.2",
+        "symfony/asset": "^5.2",
+        "symfony/console": "^5.2",
+        "symfony/flex": "^1.10",
+        "symfony/framework-bundle": "^5.2",
+        "symfony/messenger": "^5.2",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^2.0",
-        "symfony/polyfill-php80": "^1.17",
-        "symfony/security-bundle": "^5.1",
-        "symfony/twig-bundle": "^5.1",
-        "symfony/yaml": "^5.1"
+        "symfony/polyfill-php80": "^1.20",
+        "symfony/security-bundle": "^5.2",
+        "symfony/twig-bundle": "^5.2",
+        "symfony/yaml": "^5.2"
     },
     "require-dev": {
         "blackfire/php-sdk": "^1.23",
@@ -34,10 +34,10 @@
         "phpunit/phpunit": "v9.3",
         "roave/security-advisories": "dev-master",
         "sylius-labs/coding-standard": "^3.2",
-        "symfony/browser-kit": "^5.1",
-        "symfony/css-selector": "^5.1",
-        "symfony/dotenv": "^5.1",
-        "symfony/phpunit-bridge": "^5.1",
+        "symfony/browser-kit": "^5.2",
+        "symfony/css-selector": "^5.2",
+        "symfony/dotenv": "^5.2",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/profiler-pack": "^1.0",
         "vimeo/psalm": "^3.16"
     },
@@ -79,7 +79,7 @@
         "symfony": {
             "id": "01C1QKYZ4DSB74RHER7JCF8Q1K",
             "allow-contrib": false,
-            "require": "^5.1"
+            "require": "^5.2"
         }
     },
     "name": "jorge07/symfony-5-es-cqrs-boilerplate",
