--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,16 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^8.0",
         "ext-json": "*",
+        "ext-amqp": "*",
         "beberlei/assert": "^3.3",
         "broadway/broadway": "^2.3",
         "broadway/broadway-bundle": "^0.5",
         "broadway/event-store-dbal": "^0.5",
-        "elasticsearch/elasticsearch": "^7.9",
+        "elasticsearch/elasticsearch": "^7.11",
         "lexik/jwt-authentication-bundle": "^2.10",
-        "nelmio/api-doc-bundle": "4.0.1",
+        "nelmio/api-doc-bundle": "4.1.1",
         "ramsey/uuid": "^4.1",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.6",
