--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,5 @@
 parameters:
 	checkMissingIterableValueType: false
+	checkGenericClassInNonGenericObjectType: false
 	excludes_analyse:
 		- src/Infrastructure/Shared/Persistence/Doctrine/Migrations/*
