--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -53,9 +53,9 @@ security:
 
     access_control:
         - { path: ^/profile,      roles: ROLE_USER }
-        - { path: ^/api/healthz, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/auth,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/signup,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/doc,     roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/healthz, roles: PUBLIC_ACCESS }
+        - { path: ^/api/auth,    roles: PUBLIC_ACCESS }
+        - { path: ^/api/signup,  roles: PUBLIC_ACCESS }
+        - { path: ^/api/doc,     roles: PUBLIC_ACCESS }
         - { path: ^/api/,        roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/,            roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/,            roles: PUBLIC_ACCESS }
