--- a/composer.json
+++ b/composer.json
@@ -3,29 +3,32 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "ext-json": "*",
         "ext-amqp": "*",
+        "ext-json": "*",
         "beberlei/assert": "^3.3",
         "broadway/broadway": "^2.4",
         "broadway/broadway-bundle": "^0.5",
         "broadway/event-store-dbal": "^0.5",
+        "doctrine/doctrine-bundle": "^2.5",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.11",
         "elasticsearch/elasticsearch": "^7.11",
         "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/api-doc-bundle": "^4.1|4.x-dev",
         "ramsey/uuid": "^4.1",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.6",
-        "symfony/amqp-messenger": "^5.3",
-        "symfony/asset": "^5.3",
-        "symfony/console": "^5.3",
+        "symfony/amqp-messenger": "^5.4",
+        "symfony/asset": "^5.4",
+        "symfony/console": "^5.4",
         "symfony/flex": "^1.12",
-        "symfony/framework-bundle": "^5.3",
-        "symfony/messenger": "^5.3",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/messenger": "^5.4",
         "symfony/monolog-bundle": "^3.6",
-        "symfony/orm-pack": "^2.1",
-        "symfony/security-bundle": "^5.3",
-        "symfony/twig-bundle": "^5.3",
-        "symfony/yaml": "^5.3"
+        "symfony/proxy-manager-bridge": "^5.4",
+        "symfony/security-bundle": "^5.4",
+        "symfony/twig-bundle": "^5.4",
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
         "blackfire/php-sdk": "^1.24",
@@ -34,18 +37,24 @@
         "phpunit/phpunit": "v9.3",
         "roave/security-advisories": "dev-master",
         "sylius-labs/coding-standard": "^3.2.2",
-        "symfony/browser-kit": "^5.3",
-        "symfony/css-selector": "^5.3",
-        "symfony/dotenv": "^5.3",
-        "symfony/phpunit-bridge": "^5.3",
-        "symfony/profiler-pack": "^1.0",
+        "symfony/browser-kit": "^5.4",
+        "symfony/css-selector": "^5.4",
+        "symfony/dotenv": "^5.4",
+        "symfony/phpunit-bridge": "^5.4",
+        "symfony/stopwatch": "^5.4",
+        "symfony/web-profiler-bundle": "^5.4",
         "vimeo/psalm": "^3.18"
     },
     "config": {
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
@@ -80,7 +89,7 @@
         "symfony": {
             "id": "01C1QKYZ4DSB74RHER7JCF8Q1K",
             "allow-contrib": false,
-            "require": "^5.3"
+            "require": "^5.4"
         }
     },
     "name": "jorge07/symfony-5-es-cqrs-boilerplate",
