--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,15 +1,18 @@
 framework:
     secret: '%env(APP_SECRET)%'
-    #default_locale: en
-    #csrf_protection: ~
-    #http_method_override: true
+    default_locale: en
+    csrf_protection: true
+    http_method_override: false
 
-    # uncomment this entire section to enable sessions
+    # Enables session support. Note that the session will ONLY be started if you read or write from it.
+    # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: ~
-
-    #esi: ~
-    #fragments: ~
+        handler_id: null
+        cookie_secure: auto
+        cookie_samesite: lax
+        storage_factory_id: session.storage.factory.native
+    esi: true
+    fragments: true
     php_errors:
         log: true
     router:
