--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,5 @@
 parameters:
 	checkMissingIterableValueType: false
 	checkGenericClassInNonGenericObjectType: false
-	excludes_analyse:
+	excludePaths:
 		- src/Infrastructure/Shared/Persistence/Doctrine/Migrations/*
