--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,9 +34,7 @@ security:
             pattern:  ^/api
             provider: users
             stateless: true
-            guard:
-              authenticators:
-                - lexik_jwt_authentication.jwt_token_authenticator
+            jwt: ~
 
         secured_area:
             pattern: ^/
