feat(framework): upgrade to SF6

--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,15 @@
         "ext-json": "*",
         "beberlei/assert": "^3.3",
         "broadway/broadway-bundle": "^0.6.1",
-        "broadway/event-store-dbal": "^0.5",
-        "doctrine/doctrine-bundle": "^2.5",
+        "broadway/event-store-dbal": "^0.6",
+        "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
-        "doctrine/orm": "^2.11",
+        "doctrine/orm": "^2.14",
         "elasticsearch/elasticsearch": "^7.11",
         "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/api-doc-bundle": "^4.1|4.x-dev",
         "ramsey/uuid": "^4.1",
         "ramsey/uuid-doctrine": "^1.6",
-        "sensio/framework-extra-bundle": "^v6.2.6",
         "symfony/amqp-messenger": "^6.0",
         "symfony/asset": "^6.0",
         "symfony/cache": "^6.0",
@@ -31,10 +30,13 @@
         "symfony/yaml": "^6.0"
     },
     "require-dev": {
+        "php-coveralls/php-coveralls": "^2.5",
+        "phpunit/phpcov": "^2.0",
         "blackfire/php-sdk": "^1.24",
         "dama/doctrine-test-bundle": "^6.5",
         "phpstan/phpstan": "^1.4.6",
         "phpunit/phpunit": "v9.3",
+        "rector/rector": "^0.15.13",
         "roave/security-advisories": "dev-master",
         "sylius-labs/coding-standard": "^v4.2.0",
         "symfony/browser-kit": "^6.0",
